        PR target/40031         * config/arm/arm.c (require_pic_register): Emit on entry         edge, not at entry of function. testsuite/         * gcc.dg/pr40031.c: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147350 138bc75d-0d04-0410-961f-82ee72b054a4